Ajustes no carrossel

--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         </div>
     </div>
     <div class="section">
-        <div class="content" id="projetos"
-            style="height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        <div class="content" id="projetos">
             <div class="falling-text">
                 <h2>Meus Projetos</h2>
                 <div class="carousel-container">
@@ -99,40 +98,30 @@
                                     <a href="https://dennispy14.github.io/ClimaPorCidade/" target="_blank">
                                         <p>Weather Finder</p>
                                     </a>
-                                    <div class="card-content">
-                                        <p></p>
-                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="card">
-                                    <img src="imagens/projeto2.jpg" alt="Card Image">
+                                    <img src="imagens/projeto2.png" alt="Card Image">
                                     <a href="" target="_blank">
                                         <p>Em Breve</p>
                                     </a>
-                                    <div class="card-content">
-                                        <p></p>
-                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="card">
-                                    <img src="imagens/projeto3.jpg" alt="Card Image">
+                                    <img src="imagens/projeto2.png" alt="Card Image">
                                     <a href="" target="_blank">
                                         <p>Em Breve</p>
                                     </a>
-                                    <div class="card-content">
-                                        <p></p>
-                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
                     </div>
-
                 </div>
             </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
     </div>
     <div class="section">
