--- a/index.html
+++ b/index.html
@@ -40,33 +40,33 @@
         </div>
     </nav>
 
-    <div class="section">
-        <div class="content" id="inicio">
+    <div class="section" id="inicio">
+        <div class="fullscreen-div"></div>
+        <div class="content">
             <div class="falling-text">
-                <div id="divInicio">
-                    <div id="txt" style="flex: 1;">
-                        <h2><span class="typewriter-text">Bem-vindo ao meu Portfólio</span></h2>
-                        <p>Olá! Meu nome é Dennis e sou um Programador FullStack.</p>
-                        <div id="links">
-                            <a class="link" href="https://www.linkedin.com/in/dennis-py-a497b5b4/" target="_blank"
-                                style="margin-right: 20px;"><i class="fa-brands fa-linkedin"
-                                    style="font-size: 15px;"></i> LinkedIn</a>
-                            <a class="link" href="https://github.com/dennispy14" target="_blank"><i
-                                    class="fa-brands fa-github" style="font-size: 15px;"></i>
-                                GitHub</a>
-                        </div>
-                    </div>
-                    <div style="flex: 1;">
-                        <img id="img" src="imagens/sua_foto.jpg" alt="Minha Foto"
-                            style="width: 200px; height: 200px; border-radius: 50%;">
+                <div style="flex: 1;">
+                    <img id="img" src="imagens/sua_foto.jpg" alt="Minha Foto"
+                        style="width: 200px; height: 200px; border-radius: 50%;">
+                </div>
+                <div id="txt" style="flex: 1;">
+                    <h2><span class="typewriter-text">Bem-vindo ao meu Portfólio</span></h2>
+                    <p>Olá! Meu nome é Dennis e sou um Programador FullStack.</p>
+                    <div id="links">
+                        <a class="link" href="https://www.linkedin.com/in/dennis-py-a497b5b4/" target="_blank"
+                            style="margin-right: 20px;"><i class="fa-brands fa-linkedin" style="font-size: 15px;"></i>
+                            LinkedIn</a>
+                        <a class="link" href="https://github.com/dennispy14" target="_blank"><i
+                                class="fa-brands fa-github" style="font-size: 15px;"></i>
+                            GitHub</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="section">
-        <div id="sobre" class="content">
-            <div class="about-text">
+    <div class="section" id="sobre">
+        <div class="fullscreen-div"></div>
+        <div class="content">
+            <div class="falling-text">
                 <h2>Sobre Mim</h2>
                 <div class="intro">
                     <p>Olá! Sou um Desenvolvedor FullStack. Minha paixão pela tecnologia me levou a
@@ -85,8 +85,9 @@
             </div>
         </div>
     </div>
-    <div class="section">
-        <div class="content" id="projetos">
+    <div class="section" id="projetos">
+        <div class="fullscreen-div"></div>
+        <div class="content">
             <div class="falling-text">
                 <h2>Meus Projetos</h2>
                 <div class="carousel-container">
@@ -124,8 +125,9 @@
             <div class="swiper-button-prev"></div>
         </div>
     </div>
-    <div class="section">
-        <div class="content" id="habilidades">
+    <div class="section" id="habilidades">
+        <div class="fullscreen-div"></div>
+        <div class="content">
             <div class="falling-text">
                 <h2>Habilidades</h2>
                 <div class="skills">
