Ajustes na section inicial, criado icones para git e linkedin e ajustes na section projetos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="contact-icons">
                 <a href="mailto:dennispy14@hotmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://wa.me/5551985501811" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://github.com/dennispy14" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/dennis-py-a497b5b4/" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
         <ul class="nav-links">
@@ -44,22 +47,15 @@
         <div class="fullscreen-div"></div>
         <div class="content">
             <div class="falling-text">
-                <div style="flex: 1;">
+                <div>
                     <img id="img" src="imagens/sua_foto.jpg" alt="Minha Foto"
                         style="width: 200px; height: 200px; border-radius: 50%;">
                 </div>
-                <div id="txt" style="flex: 1;">
+                <div id="txt">
                     <h2><span class="typewriter-text">Bem-vindo ao meu Portfólio</span></h2>
                     <p>Olá! Meu nome é Dennis e sou um Programador FullStack.</p>
-                    <div id="links">
-                        <a class="link" href="https://www.linkedin.com/in/dennis-py-a497b5b4/" target="_blank"
-                            style="margin-right: 20px;"><i class="fa-brands fa-linkedin" style="font-size: 15px;"></i>
-                            LinkedIn</a>
-                        <a class="link" href="https://github.com/dennispy14" target="_blank"><i
-                                class="fa-brands fa-github" style="font-size: 15px;"></i>
-                            GitHub</a>
-                    </div>
                 </div>
+
             </div>
         </div>
     </div>
@@ -103,7 +99,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="card">
-                                    <img src="imagens/projeto2.png" alt="Card Image">
+                                    <img src="imagens/projeto2.jpg" alt="Card Image">
                                     <a href="" target="_blank">
                                         <p>Em Breve</p>
                                     </a>
@@ -111,7 +107,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="card">
-                                    <img src="imagens/projeto2.png" alt="Card Image">
+                                    <img src="imagens/projeto3.jpg" alt="Card Image">
                                     <a href="" target="_blank">
                                         <p>Em Breve</p>
                                     </a>
