--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
                     <div class="skill"><i class="fa-brands fa-js" onclick="abrirMiniJanela(2)"></i></div>
                     <div class="skill"><i class="fa-brands fa-html5" onclick="abrirMiniJanela(3)"></i> </div>
                     <div class="skill"><i class="fa-brands fa-css3-alt" onclick="abrirMiniJanela(4)"></i></div>
+                    <div class="skill"><i class="fa-solid fa-database fa-xl" onclick="abrirMiniJanela(5)"></i></div>
+
                 </div>
                 <div class="mini-janela" id="mini-janela" style="display: none;">
                     <h2 id="tituloSkill"></h2>
