Update link in index.html to point to new URL

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div class="swiper-slide">
                                 <div class="card">
                                     <img src="imagens/projeto2.jpg" alt="Card Image">
-                                    <a href="" target="_blank">
+                                    <a href="https://dennispy14.github.io/react-dev/" target="_blank">
                                         <p>Em Breve</p>
                                     </a>
                                 </div>
